[refs #120299] Personal menu - fix overflow.

--- a/land/copernicus/theme/skins/copernicus_theme_styles/redesign-app.css
+++ b/land/copernicus/theme/skins/copernicus_theme_styles/redesign-app.css
@@ -8039,3 +8039,9 @@ form#land-search button.search-button i.fa-search {
     top: -70px;
   }
 }
+
+@media (min-width: 451px) and (max-width: 803px) {
+  ul.list-inline.land-list-separated {
+    overflow-x: hidden !important;
+  }
+}
